@@ -1,2 +1,2 @@
 DIST afni-0_pre20130927.tgz 22319561 SHA256 5c3e74c19c93b85e9deb2507ff8fa09a109f6fae34aeea748ba2906191cb6a91 SHA512 fb11d39cfebede01816c110946c74af8b3d9e69e18ea4902f9d976e1387b640329c610e261cc7520316b417b29c5818958f3ec26e3e3695a0efb7266e89966a5 WHIRLPOOL 80059da1b1b7aa9c98c6459709538c7e1a350045c9d6b1daaa70932d8f36726744c413e297c84569236f147df41a10adafee9cd91fb22285c83d59d90401aba3
-DIST linux_xorg7_64.tgz 872482524 SHA256 a20746c67305504f90e3543d30fe32c2846dd0c23aefb3f020908818c9c71e51 SHA512 dbe17a99e9e0acae14880699b1739cf902bdc84d371fa42e66b5ccc979dbcd0e4e2e11e18f513086149873a09db7ed865ca02cfa2633ae1f8e89219face90715 WHIRLPOOL 68c655f7171eab1ce2420e7db0ed98fdea1ce4cc72c2c7c5a32b501fe85f0c17db7a780a402731fedd1388f0188489f5edfd183caee3049876753498d48cd1bf
+DIST afni_src.tgz 25568890 SHA256 adaa52ad9ea40af6a7b501ea880152c1ebfb3ed466e443075507bc935f61cd06 SHA512 47f86051dbbfe00a3c28a53440d97b67a961508a314979bf1aec1d57b56fb5f0a649771eb9ee59f399fc321d86dac468525d6e0b75fd179dff418201b2ce3091 WHIRLPOOL 1ce276e5bf15fff333f031aa54e495461973a1df18d0544d02d4e82282d68844132e6c9e87e50896e95dce1eda760ae279a9069d087438e8fd970ce4573dbcad
